# newsroom

./: .dockerignore  .env.example  .env.local.example  .gitignore  AGENTS.md  CLAUDE.md  COMMERCIAL_LICENSE.md  CONTEXT.md  CONTRIBUTING.md  Dockerfile  Dockerfile.worker  Dockerfile.worker.dockerignore  LICENSE.md  METHODOLOGY-LICENSE.md  NOTICE  README.md  ROADMAP.md  SELF-HOST.md  VISION.md  docker-compose.yml  fly.toml  fly.worker.toml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml
.claude/: launch.json
.github/workflows/: ci.yml  uptime.yml
apps/web/: .dockerignore  Dockerfile  fly.toml  middleware.ts  next.config.ts  package.json
apps/worker/: README.md  pyproject.toml
docs/: ADOPTION.md  ARCHITECTURE.md  BRAND-DECISION.md  CAP-TABLE.md  COMMUNITY-LAUNCH-PLAN.md  DEMO-TENANT-SPEC.md  DEPLOY.md  DESIGN-PARTNER-SHORTLIST.md  INTEGRATION-SPEC.md  IP-PROVENANCE.md  MARKETING-SITE-SPEC.md  MISSION.md  MVP-SCOPE.md  PLAYGROUND-PLAN.md  PREMORTEM-RECONCILIATION.md  PRODUCT.md  QUARTERLY-REVIEW-template.md  RLS-ROLLOUT.md  SETUP.md  SOURCE-ROADMAP.md  UPTIME-MONITORING.md  WK0-LEDGER.md  WK0-PLAN.md
docs/adr/: 0001-monorepo-structure.md  0002-language-split.md  0003-postgres-single-store.md  0004-claude-agent-sdk.md  0005-multi-tenant-row-level.md  0006-module-plugin-architecture.md  0013-design-tokens.md  0024-apache2-license-model.md  0025-voluntary-contribution.md  0026-indie-sustainability-rules.md  0027-layered-launch.md  0028-values-foss-first.md  0029-trust-primitives-disclosure-off-record.md  0030-merge-xtnd-as-capability-tier.md  (+35 more)
infra/: schema.sql
marketing/: PRODUCT-PAGES-IA.md  SHARED-IA.md
(+306 files in other folders)
