[project]
name = "onlinejourno-worker"
version = "0.0.0"
description = "Placeholder. Python worker process (cron + scheduled collectors). Built out Wk 2+."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "FSL-1.1-ALv2" }
authors = [{ name = "Subhash Rai" }]
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
# No source yet — placeholder for workspace registration only.
bypass-selection = true
